--- a/app/src/main/res/layout/banner_item_layout.xml
+++ b/app/src/main/res/layout/banner_item_layout.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="360dp"
+    android:layout_width="320dp"
     android:layout_height="180dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardElevation="0dp"
     android:elevation="0dp"
-    app:cardCornerRadius="18dp">
+    app:cardCornerRadius="12dp"
+    >
 
     <ImageView
         android:id="@+id/imgBanner"
