--- a/app/src/main/res/layout/product_item_layout.xml
+++ b/app/src/main/res/layout/product_item_layout.xml
@@ -61,7 +61,7 @@
             android:layout_height="0dp"
             >
 
-            <TextView
+            <!--<TextView
                 android:layout_weight="0.7"
                 android:layout_marginTop="4dp"
                 android:layout_marginBottom="10dp"
@@ -71,7 +71,7 @@
                 android:fontFamily="@font/satoshi_bold"
                 android:textColor="#048F55"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content" />-->
 
             <ImageView
                 android:layout_weight="0.3"
