--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -191,14 +191,15 @@
                 android:background="?android:attr/listDivider"
                 android:layout_marginVertical="4dp"/>
 
-            <com.google.android.material.textview.MaterialTextView
+            <!--<com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tvBasePrice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Base Price: ₹"
                 android:textStyle="bold"
                 android:layout_marginVertical="4dp"
-                />
+                android:visibility="gone"
+                />-->
 
 
 
