--- a/app/src/main/res/layout/product_item_layout.xml
+++ b/app/src/main/res/layout/product_item_layout.xml
@@ -73,14 +73,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />-->
 
-            <ImageView
-                android:layout_weight="0.3"
-                android:layout_gravity="end"
-                android:id="@+id/btnAddToWishlist"
-                android:src="@drawable/ic_baseline_favorite_border_24"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+
         </LinearLayout>
+
+        <ImageView
+            android:layout_weight="0.3"
+            android:layout_gravity="end"
+            android:id="@+id/btnAddToWishlist"
+            android:src="@drawable/ic_baseline_favorite_border_24"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/dimen_low"/>
 
 
     </LinearLayout>
