--- a/app/src/main/res/layout/fragment_phone_pe.xml
+++ b/app/src/main/res/layout/fragment_phone_pe.xml
@@ -10,15 +10,9 @@
     android:animateLayoutChanges="true">
 
     <!-- Title -->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Select Payment Method"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:layout_gravity="center"
-        android:layout_marginBottom="16dp"
-        android:layout_marginTop="@dimen/margin_medium"/>
+    <include
+        android:id="@+id/payOptionsToolbar"
+        layout="@layout/toolbar_layout"/>
 
     <!-- Credit Card Option -->
     <LinearLayout
