--- a/app/src/main/res/layout/loading_screen.xml
+++ b/app/src/main/res/layout/loading_screen.xml
@@ -6,10 +6,12 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_width="256dp"
+        android:layout_width="wrap_content"
         android:layout_height="128dp"
         android:gravity="center"
-        android:theme="@style/BottomSheetStyle">
+        android:theme="@style/BottomSheetStyle"
+        android:paddingHorizontal="@dimen/margin_high"
+        >
         <ProgressBar
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -18,11 +20,12 @@
             android:id="@+id/tvTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="22sp"
+            android:textSize="18sp"
             android:padding="4dp"
             android:textColor="@color/black"
             android:text="Please wait"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:layout_marginHorizontal="@dimen/dimen_low"/>
     </LinearLayout>
 
 </LinearLayout>
