--- a/app/src/main/res/layout/product_buying_button_layout.xml
+++ b/app/src/main/res/layout/product_buying_button_layout.xml
@@ -116,6 +116,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_phone"
+            android:visibility="gone"
             />
 
     </LinearLayout>
