--- a/app/src/main/res/layout/fragment_check_payment_status.xml
+++ b/app/src/main/res/layout/fragment_check_payment_status.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
-        android:id="@+id/resultLayout"
+        android:id="@+id/paymentSuccessLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -35,6 +35,48 @@
             android:text="Pyament Success"
             android:layout_marginHorizontal="64dp"
             android:textSize="18sp"
+            android:textAlignment="center"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/paymentNotSucceedLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center"
+        >
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Something went wrong !"
+            android:textStyle="bold"
+            android:textSize="32sp"/>
+
+        <com.airbnb.lottie.LottieAnimationView
+            app:lottie_autoPlay="true"
+            android:layout_width="180dp"
+            android:layout_height="180dp"
+            android:layout_margin="16dp"
+            android:layout_centerInParent="true"
+            android:visibility="invisible"/>
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Pyament Failed"
+            android:layout_marginHorizontal="64dp"
+            android:textSize="18sp"
+            android:textAlignment="center"/>
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/don_t_worry_if_your_account_got_debited_n_we_will_process_a_refund_for_you_withing_3_4_days"
+            android:layout_marginHorizontal="64dp"
+            android:textSize="18sp"
+            android:layout_marginTop="@dimen/padding_medium"
             android:textAlignment="center"/>
 
     </LinearLayout>
