--- a/app/src/main/res/layout/fragment_check_payment_status.xml
+++ b/app/src/main/res/layout/fragment_check_payment_status.xml
@@ -11,6 +11,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:gravity="center"
+        android:visibility="gone"
         >
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -45,6 +46,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:gravity="center"
+        android:visibility="gone"
         >
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -52,7 +54,8 @@
             android:layout_height="wrap_content"
             android:text="Something went wrong !"
             android:textStyle="bold"
-            android:textSize="32sp"/>
+            android:textSize="26sp"
+            android:layout_gravity="center_horizontal"/>
 
         <com.airbnb.lottie.LottieAnimationView
             app:lottie_autoPlay="true"
