--- a/app/src/main/res/layout/cart_item_layout.xml
+++ b/app/src/main/res/layout/cart_item_layout.xml
@@ -14,148 +14,177 @@
         app:cardElevation="0dp"
         android:background="@color/bg_color"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:contentPadding="@dimen/dimen_low">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_margin="6dp"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <ImageView
-                android:src="@color/order_selected_text_color"
-                android:id="@+id/imgCart"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"/>
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="@dimen/dimen_low">
 
             <LinearLayout
-                android:layout_marginLeft="4dp"
-                android:orientation="vertical"
                 android:id="@+id/linearCartDetails"
                 app:layout_constraintLeft_toRightOf="@id/imgCart"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_width="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <TextView
-                    android:id="@+id/txtCartItemProductName"
-                    android:text="Safty poster with something else"
-                    android:fontFamily="@font/satoshi_bold"
-                    android:textColor="@color/title_text_color"
-                    android:textSize="16sp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                <ImageView
+                    android:src="@color/order_selected_text_color"
+                    android:id="@+id/imgCart"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_gravity="center"
+                    />
 
-                <TextView
-                    android:id="@+id/txtCartItemQuantity"
-                    android:text="Quantity : 5"
-                    android:textSize="14sp"
-                    android:fontFamily="@font/satoshi_medium"
-                    android:textColor="@color/text_normal_color"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+               <LinearLayout
+                   android:layout_width="0dp"
+                   android:layout_height="wrap_content"
+                   android:orientation="vertical"
+                   android:layout_weight="1"
+                   android:padding="@dimen/dimen_low"
+                   android:minHeight="72dp"
+                   >
 
-                <TextView
-                    android:id="@+id/txtCartItemTotal"
-                    android:text="Total : $5"
-                    android:textSize="14sp"
-                    android:fontFamily="@font/satoshi_medium"
-                    android:textColor="#048F55"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                   <TextView
+                       android:id="@+id/txtCartItemProductName"
+                       android:text="Safty poster with something"
+                       android:fontFamily="@font/satoshi_bold"
+                       android:textColor="@color/title_text_color"
+                       android:textSize="16sp"
+                       android:layout_width="wrap_content"
+                       android:layout_height="wrap_content"/>
+
+                   <FrameLayout
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:layout_marginTop="@dimen/dimen_low"
+                       >
+
+                       <TextView
+                           android:id="@+id/txtCartItemQuantity"
+                           android:text="Quantity : 5"
+                           android:textSize="14sp"
+                           android:fontFamily="@font/satoshi_medium"
+                           android:textColor="@color/text_normal_color"
+                           android:layout_width="wrap_content"
+                           android:layout_height="wrap_content"/>
+
+                       <TextView
+                           android:id="@+id/txtCartItemTotal"
+                           android:text="Total : $5"
+                           android:textSize="14sp"
+                           android:fontFamily="@font/satoshi_medium"
+                           android:textColor="#048F55"
+                           android:layout_width="wrap_content"
+                           android:layout_height="wrap_content"
+                           android:layout_gravity="end"/>
+
+                   </FrameLayout>
+
+               </LinearLayout>
 
             </LinearLayout>
-
-            <ImageView
-                android:clickable="true"
-                android:foreground="?attr/selectableItemBackground"
-                android:layout_marginTop="6dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:id="@+id/btnRemoveCartItem"
-                android:scaleType="centerCrop"
-                android:src="@drawable/trash_can"
-                android:layout_width="26dp"
-                android:layout_height="26dp"
-                />
-
 
             <LinearLayout
-                app:layout_constraintTop_toBottomOf="@id/btnRemoveCartItem"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="4dp"
-                android:orientation="horizontal">
+                android:gravity="center"
+                android:layout_marginTop="@dimen/dimen_low"
+                >
 
-                <!--
-                <EditText
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:id="@+id/btnRemoveCartItem"
+                    android:text="Remove"
                     android:gravity="center"
-                    android:textSize="12sp"
-                    android:inputType="number"
-                    android:hint="Quantity"
-                    android:id="@+id/edCartQuantity"
+                    android:textColor="@color/red"
+                    android:layout_weight="2"
+                    android:background="#eeeeee"/>
+
+
+                <LinearLayout
+                    app:layout_constraintTop_toBottomOf="@id/btnRemoveCartItem"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="10dp"/>
+                    android:orientation="horizontal"
+                    android:layout_weight="3"
+                    android:gravity="end">
 
-                <TextView
-                    android:clickable="true"
-                    android:foreground="?attr/selectableItemBackground"
-                    android:textSize="12sp"
-                    android:paddingBottom="6dp"
-                    android:paddingTop="4dp"
-                    android:fontFamily="@font/satoshi_medium"
-                    android:paddingHorizontal="20dp"
-                    android:id="@+id/btnUpdateCart"
-                    android:background="@drawable/normal_button_bg"
-                    android:text="Update"
-                    android:textColor="@color/white"
-                    android:textAllCaps="false"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-                    -->
-                <ImageView
-                    android:clickable="true"
-                    android:foreground="?attr/selectableItemBackground"
-                    android:id="@+id/btnMinusCart"
-                    android:src="@drawable/ic_baseline_horizontal_rule_24"
-                    android:background="@drawable/round_button_bg"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:padding="6dp"/>
+                    <!--
+                    <EditText
+                        android:gravity="center"
+                        android:textSize="12sp"
+                        android:inputType="number"
+                        android:hint="Quantity"
+                        android:id="@+id/edCartQuantity"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="10dp"/>
 
-                <TextView
-                    android:textSize="18sp"
-                    android:fontFamily="@font/satoshi_medium"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="8dp"
-                    android:id="@+id/txtCartItemQuantityText"
-                    android:text="0"
-                    android:textColor="@color/title_text_color"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    <TextView
+                        android:clickable="true"
+                        android:foreground="?attr/selectableItemBackground"
+                        android:textSize="12sp"
+                        android:paddingBottom="6dp"
+                        android:paddingTop="4dp"
+                        android:fontFamily="@font/satoshi_medium"
+                        android:paddingHorizontal="20dp"
+                        android:id="@+id/btnUpdateCart"
+                        android:background="@drawable/normal_button_bg"
+                        android:text="Update"
+                        android:textColor="@color/white"
+                        android:textAllCaps="false"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                        -->
+                    <ImageView
+                        android:clickable="true"
+                        android:foreground="?attr/selectableItemBackground"
+                        android:id="@+id/btnMinusCart"
+                        android:src="@drawable/ic_baseline_horizontal_rule_24"
+                        android:background="@drawable/round_button_bg"
+                        android:layout_width="32dp"
+                        android:layout_height="32dp"
+                        android:padding="8dp"/>
 
-                <ImageView
-                    android:layout_marginLeft="8dp"
-                    android:clickable="true"
-                    android:foreground="?attr/selectableItemBackground"
-                    android:id="@+id/btnPlusCart"
-                    android:src="@drawable/ic_baseline_add_24"
-                    android:background="@drawable/round_button_bg"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:padding="4dp"/>
+                    <TextView
+                        android:textSize="18sp"
+                        android:fontFamily="@font/satoshi_medium"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="8dp"
+                        android:id="@+id/txtCartItemQuantityText"
+                        android:text="0"
+                        android:textColor="@color/title_text_color"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                    <ImageView
+                        android:layout_marginLeft="8dp"
+                        android:clickable="true"
+                        android:foreground="?attr/selectableItemBackground"
+                        android:id="@+id/btnPlusCart"
+                        android:src="@drawable/ic_baseline_add_24"
+                        android:background="@drawable/round_button_bg"
+                        android:layout_width="32dp"
+                        android:layout_height="32dp"
+                        android:padding="8dp"/>
+
+                </LinearLayout>
 
             </LinearLayout>
-        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </LinearLayout>
 
     </com.google.android.material.card.MaterialCardView>
 </layout>
